# Corobotsim

./: CoroModel.urdf.xacro  README.md  coro.launch  coro.world  generateSDF.sh  robotiq_2f85.urdf.xacro  robotiq_2f85_controller.yaml  ur5_arm_controller.yaml
GazeboInterface/: CMakeLists.txt  FTSensorInterface.py  GazeboInterface.cpp  Makefile  cmake_install.cmake  test_interface.py
InsertionTaskFiles/: Base.dae  Base.sdf  Base.stl  HexRod.dae  HexRod.sdf  HexRod.stl  RoundRod.dae  RoundRod.sdf  RoundRod.stl  SlotRod.dae  SlotRod.sdf  SlotRod.stl  SquareRod.dae  SquareRod.sdf  SquareRod.stl
corobotsim/: coro_gym_env.py  corobotsim.py  pose_utils.py  scene_manager.py  simrobot_control.py  simulation_manager.py
